kubernetes/kubernets.yaml
#Python Server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sew-sud-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sew-sud-server
  template:
    metadata:
      labels:
        app: sew-sud-server
    spec:
      containers:
        - name: sew-sud-server
          image: rwutscher/sew-sud-server:2.9.3
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: sew-sud-server-service
  labels:
    app: sew-sud-server
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: http
  selector:
    app: sew-sud-server
---
# VUE Client
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sew-sud-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sew-sud-frontend
  template:
    metadata:
      labels:
        app: sew-sud-frontend
    spec:
      containers:
        - name: sew-sud-frontend
          image: rwutscher/sew-sud-frontend:1.8
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: sew-sud-frontend-service
  labels:
    app: sew-sud-frontend
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: http
  selector:
    app: sew-sud-frontend
